--- a/9292teve.html
+++ b/9292teve.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>⚽ ƒιƒα ρяє∂ι¢тσя ⚽</title>
+    <title>🏴‍☠️YOHAN FIFA PREDICTOR🥷</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
             <p id="inputMessage"></p> 
-            <h1 id="tete">⚽ƒιƒα ρяє∂ι¢тσя⚽</h1>
+            <h1 id="tete">>🏴‍☠️YOHAN FIFA PREDICTOR🥷</h1>
             <hr style="width: 50%" color="blue" />
             <p id="welcome">
-                <br>Salut ☺️, je suis un bot spécialisé dans la prédiction des matchs virtuels FIFA !
+                <br>Salut ☺️, je suis un bot spécialisé dans la prédiction des matchs virtuels FIFA du Boss YOHAN PCS !!. Tu peux m'utuliser sur n'importe Bookmakers 👍
             </p>
         </header>
         <main>
             <section class="championships">
                 <select id="championshipSelect" onchange="loadChampionshipData()">
                     <option value="">Sélectionnez un championnat</option>
-                    <option value="championship1">FIFA 5x5 Superligue</option>
-                    <option value="championship2">FIFA 3x3 Master League</option>
-                    <option value="championship3">FIFA 4x4 Championnat d'Angleterre</option>
+                    <option value="championship1">⚽FIFA 5x5 Superligue</option>
+                    <option value="championship2">⚽FIFA 3x3 Master League</option>
+                    <option value="championship3">⚽FIFA 4x4 Championnat d'Angleterre</option>
                 </select>
             </section>
             <section class="predictions">
                 <input type="text" id="teamAInput" placeholder="Équipe A ici">
                 <input type="text" id="teamBInput" placeholder="Équipe B ici">
-                <button id="msg" onclick="generatePrediction()">Obtenir la prédiction !</button>
+                <button id="msg" onclick="generatePrediction()">🥷 GÉNÉRÉ LA PRÉDICTION</button>
             </section>
             <p id="prediction"></p>        
             <section class="links">
-                <a href="https://t.me/xlegendml" target="_blank">Contacter le dev</a>
-                <a href="https://t.me/coachmadjid" target="_blank">Contacter le proprio</a>
+                <a href="https://t.me/JETWINPRO" target="_blank">Contacter le Développeur</a>
+                <a href="https://t.me/JETWINPRO" target="_blank">Contacter le Propriétaire</a>
             </section>
         </main>
     </div>
